work on release pipeline

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -76,7 +76,7 @@ jobs:
              --self-contained true \
              -p:PublishReadyToRun=true \
              -p:PublishSingleFile=true \
-             --output output/osx-64 \
+             --output output/osx-x64 \
              T2MDCli
       
       - name: zip windows
