--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -111,6 +111,8 @@ jobs:
 
   draft-release:
     runs-on: ubuntu-latest
+    needs:
+      draft-release
     steps:
     # download all created artifacts above (the .zip files)
     - uses: actions/download-artifact@v3
@@ -122,6 +124,7 @@ jobs:
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         draft: true
+        automatic_release_tag: "latest"
         files: |
           *.zip
 
