--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -15,6 +15,8 @@ jobs:
   build-test:
     runs-on: ubuntu-latest
     steps:
+      - name: test branch workflow
+        run: echo "this is a branch change"
       - name: Retrieve code
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
 
