--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -22,7 +22,7 @@ jobs:
           TEST_SECRET: ${{ secrets.TEST_SECRET }}
         shell: bash
         run: |
-          echo "secret: $TEST_SECRET"
+          echo "secret: $TEST_SECRET. Owner: $GITHUB_REPOSITORY"
       
       - name: Retrieve code
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
