--- a/T2MDCli/T2MDCli.csproj
+++ b/T2MDCli/T2MDCli.csproj
@@ -8,8 +8,8 @@
     <AssemblyName>t2md</AssemblyName>
     <Authors>Ben Renninson</Authors>
     <Company>Golden Syrup Games</Company>
-    <Version>1.3.0</Version>
-    <Copyright>2021 Golden Syrup Games</Copyright>
+    <Version>1.3.1</Version>
+    <Copyright>2022 Golden Syrup Games</Copyright>
     <PackageLicenseExpression></PackageLicenseExpression>
 
     <!--
@@ -19,6 +19,7 @@
       Enabled again because most users won't be using application whitelisting.
     -->
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    <PackageProjectUrl>https://github.com/GSGBen/t2md</PackageProjectUrl>
 
   </PropertyGroup>
 
