--- a/T2MDCli/Properties/launchSettings.json
+++ b/T2MDCli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "T2MDCli": {
       "commandName": "Project",
-      "commandLineArgs": "--output-folder .\\t2md-test",
+      "commandLineArgs": "--output-folder .\\t2md-test --no-numbering",
       "workingDirectory": "%userprofile%"
     }
   }
