Up to testing the regex selector. All online testers show it should be picking up 12, but it's only picking up 7.

--- a/T2MDCli/Properties/launchSettings.json
+++ b/T2MDCli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "T2MDCli": {
       "commandName": "Project",
-      "commandLineArgs": "--output-folder .\\t2md-test --no-numbering --remove-emoji",
+      "commandLineArgs": "--output-folder .\\t2md-test --no-numbering --remove-emoji --always-use-forward-slashes --single-file",
       "workingDirectory": "%userprofile%"
     }
   }
